# nexus

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
scripts/: setup.sh
src/: __init__.py  cli.py  config.py  models.py
src/analysis/: __init__.py  backtest.py  ccxt_helpers.py  correlation.py  engine.py  evolve.py  rate_limited.py  risk.py  sentiment.py  technical.py
src/api/: __init__.py  app.py  server.py
src/execution/: __init__.py  engine.py
src/knowledge/: __init__.py  engine.py
src/telegram/: __init__.py  alerts.py  bot.py  runner.py
tests/: test_api.py  test_backtest.py  test_ccxt_helpers.py  test_correlation.py  test_evolve.py  test_execution.py  test_knowledge.py  test_models.py  test_risk.py  test_technical.py  test_telegram.py  test_ttl.py
